--- a/router-host/package.json
+++ b/router-host/package.json
@@ -9,21 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
-    "@types/node": "^18.0.6",
+    "@mdi/font": "^7.0.96",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
-    "vuetify": "^3.0.0-beta.0",
-    "webfontloader": "^1.0.0"
+    "vuetify": "^3.0.0-beta.5",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.1.7",
+    "@types/node": "^18.6.2",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "sass": "^1.53.0",
     "typescript": "^4.6.4",
-    "vite": "^2.8.0",
-    "vite-plugin-vuetify": "^1.0.0-alpha.0",
+    "vite": "^3.0.3",
+    "vite-plugin-vuetify": "^1.0.0-alpha.14",
     "vue-tsc": "^0.38.4"
   },
   "type": "module"
